tests/PhiCore/compile_failure/src/container/string_view/assign_nullptr.fail.cpp
#include <phi/container/string_view.hpp>

int main()
{
    phi::string_view view;

    view = nullptr;
}
